right aligned the reset text so it stopped looking utterly gobsmackingly stupid

--- a/css/styles.css
+++ b/css/styles.css
@@ -93,12 +93,13 @@ li:nth-child(odd) {
 #reset-heading {
    font-size: 3rem;
    color: lightsteelblue;
-   text-align: center;
+   text-align: right;
    cursor: pointer;
+   margin-right: 1rem;
 }
 
 #reset-list {
-   margin-right: 2rem;
+   margin-right: 1rem;
    cursor: pointer;
 }
 
